--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </body>
 
 <!-- Site footer -->
-<footer class="site-footer">
+<!-- <footer class="site-footer">
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-sm-6 col-xs-12">
@@ -39,6 +39,6 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> -->
 
 </html>
