--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-    <title>Funnycharts</title>
+    <title>FunnyGraphs</title>
     <link rel="stylesheet" href="./src/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-md-8 col-sm-6 col-xs-12">
                 <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
-                    <a href="#">FunnyCharts</a>.
+                    <a href="#">FunnyGraphs</a>.
                 </p>
             </div>
 
